# pocket-vj

./: .gitignore  CMakeLists.txt  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DESIGN.md  Dockerfile.cross  Makefile  README.md  SPEC.md  TODO.md  launch.sh  pocket-vj-arm64  pocket-vj-v0.1.0.muxupd
presets/: acid-geometry.pvj  acid-trip.pvj  audio-riot.pvj  aurora.pvj  blood-rain.pvj  broken-crt.pvj  chaos.pvj  crystal-cave.pvj  crystal-skull.pvj  death-spiral.pvj  deep-space.pvj  dot-matrix.pvj  everything-burns.pvj  fire-dance.pvj  fire-storm.pvj  geometric.pvj  glitch-art.pvj  hyperspace.pvj  industrial.pvj  infinite-zoom.pvj  kaleidoscope.pvj  laser-cage.pvj  lfo-pulse.pvj  lo-fi-beats.pvj  melt.pvj  midnight-laser.pvj  neon-city.pvj  neon-pulse.pdviz  noir.pvj  ocean-drift.pvj  particle-hell.pvj  plasma-cancer.pvj  retro-wave.pvj  seizure-machine.pvj  shattered-cube.pvj  star-burst.pvj  torus-spin.pvj  tunnel-vision.pvj  vaporwave.pvj  void-collapse.pvj  (+2 more)
scripts/: cross-compile.sh  docker-cross.sh
src/: config.h  input.cpp  input.h  main.cpp  preset.cpp  preset.h
src/audio/: music_player.cpp  music_player.h
src/engine/: bpm.cpp  bpm.h  layer.cpp  layer.h  param.cpp  param.h  recorder.cpp  recorder.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sprite.cpp  sprite.h  visual_node.cpp  visual_node.h
src/engine/3d/: camera3d.cpp  camera3d.h  math3d.h  obj_loader.cpp  obj_loader.h  rasterizer.cpp  rasterizer.h
src/engine/audio/: audio_input.cpp  audio_input.h  fft.cpp  fft.h
src/engine/modulators/: audio_mod.cpp  audio_mod.h  envelope.h  (+3 more)
src/export/: pdviz.cpp  pdviz.h
src/sequencer/: pattern.cpp  pattern.h
src/ui/: file_browser.cpp  file_browser.h  layer_editor.cpp  layer_editor.h  menu.cpp  menu.h  music_browser.cpp  music_browser.h  node_browser.cpp  node_browser.h  node_editor.cpp  node_editor.h  performance.cpp  performance.h  preview.cpp  preview.h  tracker_view.cpp  tracker_view.h  widgets.cpp  widgets.h
(+48 files in other folders)
